app/View/Themed/Default/webroot/css/src/base/_view.scss
/*******************************************************************************
 * View Posting
 ******************************************************************************/

.postingheadline {
  margin-bottom: 2px;
  font-size: 1.25em;
  font-weight: bold;
  line-height: normal;
}

.posting {
    img, object, embed, video {
        max-width: 100%;
    }
    .signature {
        max-width: 80em;
    }
}

.posting, .author {
  @extend .p;
}

.author {
  @extend .info_text;
}

// BBCode
// -------------------------------------
.c_bbc_code-wrapper {
  background-color: #f9f9f9;
  padding: 4px;
}

.code {
  @extend code;
}

.c_bbc_underline {
  @extend u;
}

.c_bbc_spoiler {
    .c_bbc_spoiler-link {
        color: black;
        background-color: black;
        text-shadow: none;
        word-break: break-word;

        &:hover {
            color: inherit;
            background-color: inherit;
            text-shadow: inherit;
        }
    }
}

.c_bbc_link-dinfo, .c_bbc_imessage {
  @extend .info_text;

  font-weight: normal;
  font-style: normal;
  text-decoration: none;
}

.c_bbc_imessage {
  font-style: italic;
}

.c_bbc_upload, .c_bbc_external-image {
  margin: 5px 0;
}

.c_bbc_citation {
  color: $saito_info_text;
  font-style: italic;
}

.c_bbc_ul {
  margin: 0em 2em;
  padding: 0;
  list-style-image: image-url("bbcode_list_image.png");
}

.c_bbc_li {
  margin: 0.5em 0;
  padding: 0;
}

.c_bbc_hr {
  margin-left: 0.5em;
  width: 10em;
  display: inline-block;
}

// Geshi
// see also app/config/geshi.php for zebra colors
// -------------------------------------
.code {
  padding: 1em;
}

.code ol {
  list-style: decimal;
  padding-left: 40px;
}

.geshi-plain-text {
  font-size: smaller;
}


// Embedly
// -------------------------------------
.embedly-image {
  max-height: 256px;
}

